# snake-ai-battle

./: Cargo.toml  README.md
bots/: bot_tcp.py  bot_txt.py  client_adapter_wrapper.sh
src/: adapter.rs  main.rs
src/public/: index.html  script.js
