[package]
name = "snake-ai-battle"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client-adapter"
path = "src/adapter.rs"

[dependencies]
warp = "0.2.4"
tokio = "0.2.22"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.7"
either = "1.5"
thiserror = "1"
structopt = "0.3"
lazy_static = "1"
